# Twitter-sentiment-analysis_

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_ml.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/routes/: batch.py  health.py  models.py  sentiment.py
app/core/: config.py  logging.py  security.py
app/middleware/: rate_limit.py
app/schemas/: sentiment.py
app/services/: model_service.py  model_service_v2.py
docs/: model_comparison.md  phase4_runbook.md
docs/career/: README_FINAL.md  resume_and_linkedin.txt
infrastructure/grafana/dashboards/: sentimentai-overview.json
infrastructure/grafana/provisioning/dashboards/: dashboard-provider.yml
infrastructure/grafana/provisioning/datasources/: datasource.yml
infrastructure/k8s/: 00-namespace.yaml  01-config.yaml  02-redis.yaml  03-api.yaml  04-storage.yaml  05-hpa.yaml  06-ingress.yaml  07-pdb.yaml
infrastructure/prometheus/: alerts.yml  prometheus.yml
ml/evaluation/: drift_detector.py  evaluate_all.py
ml/explainability/: shap_explainer.py
ml/models/: train_bilstm.py  train_distilbert.py  train_roberta.py  tune_bilstm.py
ml/preprocessing/: text_cleaner.py
mlruns/0/: meta.yaml
mlruns/217658964088041157/: meta.yaml
mlruns/217658964088041157/305588b3d60a4c67a68fa3903f903b30/: meta.yaml
mlruns/217658964088041157/5f547cdadcef4ee591fd41fd4591cca2/: meta.yaml
mlruns/217658964088041157/9cf63c3d868b430abf40c17377c5c199/: meta.yaml
scripts/: train_all.sh
tests/unit/: test_api.py
(+28 files in other folders)
