[project]
name = "twitter-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==24.10.0",
    "fastapi==0.115.5",
    "gunicorn==23.0.0",
    "httpx==0.28.0",
    "mlflow==2.18.0",
    "mypy==1.13.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.21.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis[hiredis]==5.2.0",
    "ruff==0.8.0",
    "scikit-learn==1.5.2",
    "shap==0.46.0",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "torch==2.5.1",
    "transformers==4.46.3",
    "uvicorn[standard]==0.32.1",
]
